--- a/app/src/main/res/layout/layout_test.xml
+++ b/app/src/main/res/layout/layout_test.xml
@@ -21,7 +21,7 @@
         android:id="@+id/idBtnAction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Action"
+        android:text="actiontap"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
